# beauty-classifier

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.mlflow.yaml  docker-compose.mlflow.yml  docker-compose.yaml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: delpoy-back.yaml
alembic/: README  env.py
alembic/versions/: 3daa3970ddc5_init.py  3e12bcff6bf3_add_admin_user.py  abdf719175f4_add_tables.py  eacd7d53eb0b_add_tables.py
api/: __main__.py  config.py
api/db/: db_connector.py  users.py
api/db/db_models/: users.py
api/models/: __init__.py  base_model.py  users.py
api/models/attractiveness/: __init__.py  dataset.py  model.py
api/services/: __init__.py  attractiveness.py
api/utils/: security.py
api/v1/: __init__.py  auth.py  routes.py  schemas.py  users.py
app/ios/Runner.xcodeproj/: project.pbxproj
dataset/: analyze.ipynb  data.dvc  scripts.py
datasets/: .gitignore  README.md  analyze-ofpf.ipynb  analyze-scut.ipynb  open_famous_people_faces.dvc  scut.dvc
datasets/scut/: analyze.ipynb  scripts.py
datasets/scut/images/: readme
logs/: readme
models/: attractiveness_classifier.pt.dvc  readme
src/: config.py  logconf.py
src/application/: exceptions.py
src/application/services/: __init__.py  base.py  celebrity.py  crud.py  (+3 more)
src/config/: __init__.py  config.py  logconf.py
src/utils/: __init__.py  decorators.py
static/: index.html
tests/: __main__.py
tests/database/: db_populate.py  init.sql
(+53 files in other folders)
