[project]
name = "ml-project"
version = "0.1.0"
description = "ML Project for CV, PMLDL, and RL courses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "ruff>=0.13.3",
    "jwt>=1.4.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "dvc-gdrive>=3.0.1",
    "dvclive>=3.48.5",
    "torchmetrics>=1.8.2",
    "dvc>=3.63.0",
    "mlflow>=3.4.0",
    "pytest>=8.4.2",
    "pytest-cases>=3.9.1",
]
